change in main branch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <p>time lapse of this is: 41:00</p>
 hey this is Anupam and im working under feature1 branch, when i switch back to
-some other branch this line wont be shown over there
+some other branch this line wont be shown over there (button)
